<resources>
    <string name="app_name">ChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="ValidOrUnvalid">Valid Or Unvalid</string>
    <string name="Phone">Phone</string>
    <string name="Verify">Verify to register account</string>
    <string name="VerifyToLogin">Verify to login</string>
    <string name="Change">Change</string>
    <string name="Login">Login</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="Done">Done</string>
    <string name="Save">Save</string>
    <string name="Chat">Chat</string>
    <string name="Contact">Contact</string>
    <string name="Profile">Profile</string>
    <string name="EditStatus">Edit Your Status</string>

    <string name="BirthYear">Birth Year:</string>
    <string name="PhoneNumber">PhoneNumber</string>
    <string name="WriteYourMsg" >Write your msg</string>

</resources>