<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".ui.fragment.login.RegisterFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/cpp_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccpDialog_textColor="@color/mytext"
                app:ccp_contentColor="@color/mytext"
                app:ccp_countryPreference="VN"
                app:ccp_defaultNameCode="VN" />

            <ImageView
                android:id="@+id/img_valid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/ValidOrUnvalid" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/Phone"
            android:padding="5dp"
            android:textColorHint="@color/helperTextColor"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/mytext"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            app:errorTextColor="@color/mytext"
            app:helperText="Require*"
            app:helperTextTextColor="@color/helperTextColor"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_input_edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="21"
                android:singleLine="true"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_layout_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/Name"
            android:padding="5dp"
            android:textColorHint="@color/helperTextColor"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            app:errorTextColor="@color/mytext"
            app:helperText="Require*"
            app:helperTextTextColor="@color/helperTextColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_input_edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:maxLength="31"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_get_started_two_style"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/Register"
            android:textAllCaps="false"
            android:textStyle="bold" />
    </LinearLayout>
</layout>